# 2022-pnwdnd-adventofcode

./: README.md
bzvestey/: .gitignore  README.md  go.work
bzvestey/day01/: go.mod  main.go  main_test.go
bzvestey/day02/: go.mod  main.go  main_test.go
bzvestey/day03/: go.mod  main.go
bzvestey/day04/: go.mod  main.go
bzvestey/day05/: go.mod  main.go
bzvestey/day06/: go.mod  main.go
bzvestey/day07/: go.mod  main.go  main_test.go
bzvestey/day08/: go.mod  main.go
bzvestey/day09/: go.mod  main.go
bzvestey/day10/: go.mod  main.go
bzvestey/day11/: go.mod  main.go
bzvestey/day12/: go.mod  main.go  main_test.go
bzvestey/day13/: go.mod  main.go  main_test.go
bzvestey/day14/: go.mod  main.go  main_test.go
bzvestey/day15/: go.mod  main.go  main_test.go
bzvestey/day16/: go.mod  main.go  main_test.go
bzvestey/day17/: go.mod  main.go  main_test.go
bzvestey/template/: main.go  main_test.go
donpacino/day01/: day1.py
mwanek/: .gitignore
mwanek/01/: golf.py  puzzle.py  readable_golf.py
mwanek/02/: golf.py  puzzle.py  readable_golf.py
mwanek/03/: golf.py  puzzle.py  readable_golf.py
mwanek/04/: golf.py  puzzle.py
mwanek/05/: puzzle.py
pnw-ryanmcgr/: .gitignore  pyproject.toml  template.py
pnw-ryanmcgr/day01/: day01.py
pnw-ryanmcgr/day02/: day02.py
pnw-ryanmcgr/day03/: day03.py
pnw-ryanmcgr/day04/: day04.py
pnw-ryanmcgr/day05/: day05.py  stacks.yaml
pnw-ryanmcgr/day06/: day06.py
pnw-ryanmcgr/day07/: day07.py
pnw-ryanmcgr/day10/: day10.py
pnw-ryanmcgr/day11/: data.yml  day11.py
userjack6880/: info.md
(+19 files in other folders)
