[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Ryan McGregor", email = "ryanmcgr@uw.edu"},
]
dependencies = [
    "aocd>=0.1",
    "numpy>=1.23.5",
    "ipython>=8.7.0",
    "jupyterlab>=3.5.1",
    "jupyter>=1.0.0",
    "pyyaml>=6.0",
    "setuptools>=65.6.3",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
